--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
+    "@ngrx/store": "^14.3.0",
     "bootstrap": "^4.2.1",
     "datatables.net": "^1.11.5",
     "ng-multiselect-dropdown": "^0.2.14",
-    "rxjs": "~7.4.0",
+    "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
