--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/router": "^14.3.0",
     "@ngrx/store": "^14.3.0",
     "bootstrap": "^4.2.1",
+    "@ng-select/ng-select": "^9.0.2",
     "datatables.net": "^1.11.5",
-    "ng-multiselect-dropdown": "^0.2.14",
+   "ng-multiselect-dropdown": "^0.2.14",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
